Minor performance improvement
Android Studio shoved this one down my throat.